[lib]
name = "coverage_rust"
#crate_type = ["staticlib"]
crate-type = ["dylib"]
[package]
name = "coverage_rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1.4"
libc = "0.2"
bincode = "1.3"
serde = { version = "1.0", features = ["derive"] }
colored = "2"
memmap = "0.7"


